updated home file

--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 
 <html>
 <body>
-<h1>suresh Techs u tube</h1>
+<h1>syamTechs u tube</h1>
 <p>new way of teaching is the agenda.we are here to teach all kinds of prgmg language 
 we are on our way to create more videos and kng to share.please subscribe !!,please subscribe </p>
 </body>
